Added a resizeText function to increase or decrease the font-size of the text

--- a/templates/users/partials/_header.phtml
+++ b/templates/users/partials/_header.phtml
@@ -45,4 +45,8 @@
             </li>
         </ul>
     </nav>
+    <section class="font-size">
+        <button>+</button>
+        <button>-</button>
+    </section>
 </header>
