--- a/templates/users/partials/_footer.phtml
+++ b/templates/users/partials/_footer.phtml
@@ -6,4 +6,5 @@
             <li><a href="/res04-projet-soutenance/legal-notices">Legal notices</a></li>
         </ul>
     </nav>
+    <p>Site créé par Marie Richir, polices prises sur <a href="https://fonts.google.com/">Google Font</a></p>
 </footer>
