--- a/templates/users/partials/_header.phtml
+++ b/templates/users/partials/_header.phtml
@@ -46,7 +46,7 @@
         </ul>
     </nav>
     <section class="font-size">
-        <button>+</button>
-        <button>-</button>
+        <button>A</button>
+        <button>A</button>
     </section>
 </header>
