--- a/assets/styles/scss/users/partials/_header.scss
+++ b/assets/styles/scss/users/partials/_header.scss
@@ -73,6 +73,30 @@ header {
             }
         }
     }
+
+    .font-size {
+        position:absolute;
+        top: 8rem;
+        left: 2rem;
+
+        button {
+            border: none;
+            background-color: $blue;
+            clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
+                            100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+            cursor: pointer;
+
+            &:first-of-type {
+                font-size: 1.1rem;
+                padding: .5rem .7rem;
+            }
+
+            &:last-of-type {
+                font-size: .9rem;
+                padding: .7rem .9rem;
+            }
+        }   
+    }
 }
 
 /**** MEDIA QUERIES FOR TABLETS ****/
@@ -91,6 +115,15 @@ header {
                     padding: 0 1.5rem;
                 }
             }
+        }
+
+        .font-size {
+            top: 1rem;
+            left: 1rem;
+    
+            button {
+                background-color: $background-main;
+            }   
         }
     }
 }
@@ -116,6 +149,15 @@ header {
                     padding: .4rem 0;
                 }
             }
+        }
+
+        .font-size {
+            top: 1rem;
+            left: 1rem;
+    
+            button {
+                background-color: $background-main;
+            }   
         }
     }
 }
