--- a/assets/styles/scss/users/_game.scss
+++ b/assets/styles/scss/users/_game.scss
@@ -78,7 +78,7 @@
             }
 
             h4 {
-                color: $background-main;
+                color: $text-color;
                 width: fit-content;
                 margin: 0 auto;
                 padding: .4rem .6rem;
