--- a/assets/styles/scss/users/partials/_footer.scss
+++ b/assets/styles/scss/users/partials/_footer.scss
@@ -19,6 +19,12 @@ footer {
             }
         }
     }
+    
+    p {
+        text-align:center;
+        color: $background-main;
+        padding-top: .5rem;
+    }
 }
 
 /**** MEDIA QUERIES FOR TABLETS ****/
