--- a/templates/users/staticpages/legal-notices.phtml
+++ b/templates/users/staticpages/legal-notices.phtml
@@ -1,1 +1,29 @@
-<h2>Legal notices</h2>
+<main class="staticpages">
+    <h2>Legal notices</h2>
+    <section>
+        <h3>Publisher of the website</h3>
+        <ul>
+            <li>Richir Marie</li>
+            <li>Adress</li>
+            <li>Postal Code, City</li>
+            <li>Phone</li>
+            <li>Email address</li>
+            <li>SIRET (if exists)</li>
+        </ul>
+    </section>
+
+    <section>
+        <h3>Editor-in-chief</h3>
+        <p>Marie Richir</p>
+    </section>
+
+    <section>
+        <h3>Website Host</h3>
+        <ul>
+            <li>Name of the website host</li>
+            <li>Hosting company address</li>
+            <li>Hosting company phone</li>
+            <li>Hosting company email</li>
+        </ul>
+    </section>
+</main>
