Fixed some SCSS, and the changeRoleOfUser and added changeRoleOfAmin

--- a/assets/styles/scss/forms/_forms.scss
+++ b/assets/styles/scss/forms/_forms.scss
@@ -82,6 +82,12 @@ form {
             }
         }
 
+        a {
+            &.pink {
+                color: $pink;
+            }
+        }
+
         input[type=submit] {
             justify-self: center;
             margin-top: 1rem;
