--- a/assets/styles/scss/users/_villager.scss
+++ b/assets/styles/scss/users/_villager.scss
@@ -112,6 +112,7 @@
                                 border: 1px solid $pink;
 
                                 button {
+                                    width: 100%;
                                     font-size: 1.1rem;
                                     background-color: $background-body;
                                     clip-path: none;
