--- a/templates/users/partials/_footer.phtml
+++ b/templates/users/partials/_footer.phtml
@@ -4,7 +4,8 @@
             <li><a href="/res04-projet-soutenance/confidentiality">Confidentiality</a></li>
             <li><a href="/res04-projet-soutenance/credits">Credits</a></li>
             <li><a href="/res04-projet-soutenance/legal-notices">Legal notices</a></li>
+            <li><a href="mailto:marie.richir35@gmail.com">Contact</a></li>
         </ul>
     </nav>
-    <p>Site créé par Marie Richir, polices prises sur <a href="https://fonts.google.com/" target="_blank">Google Font</a></p>
+    <p>Website created by Marie Richir, fonts taken on <a href="https://fonts.google.com/" target="_blank">Google Font</a>.</p>
 </footer>
