--- a/templates/users/user/game_partials/_bundles.phtml
+++ b/templates/users/user/game_partials/_bundles.phtml
@@ -15,11 +15,11 @@
                 <?php 
                     if($bundle->getComplete() === true)
                     {
-                        echo " Completed";
+                        echo " <span class='green'>Completed</span>";
                     }
                     else
                     {
-                        echo " Not completed";
+                        echo " <span class='pink'>Not completed</span>";
                     }
                 ?>
                 </p>
