--- a/templates/users/user/login.phtml
+++ b/templates/users/user/login.phtml
@@ -11,6 +11,7 @@
         </fieldset>
         <p id="error"></p>
 
+        <a href="/res04-projet-soutenance/register" class="pink">Go register</a>
         <input type="submit" name="login" id="login" value="Login">
     </form>
 </main>
