--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -2,10 +2,10 @@
 /**** SCCS FOR THE HEADER ****/
 header {
   display: grid;
-  grid-template-columns: 17.5vw 65vw auto;
+  grid-template-columns: repeat(2, auto);
   max-width: 100vw;
   background-color: #4361EE;
-  padding: 2rem 2.5rem;
+  padding: 2rem 1.8rem;
   box-shadow: 0px 4px 25px 2px rgba(0, 0, 0, 0.4);
   position: relative;
   z-index: 1;
@@ -20,7 +20,7 @@ header nav {
 }
 header nav ul {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 header nav ul li a {
   font-size: 1.1rem;
@@ -131,22 +131,6 @@ header .font-size button:last-of-type {
     background-color: #FAFAFA;
   }
 }
-/**** MEDIA QUERIES FOR SMALLER LAPTOPS ****/
-@media only screen and (min-width: 993px) and (max-width: 1200px) {
-  header {
-    grid-template-columns: repeat(2, auto);
-  }
-  header img {
-    grid-area: 1/1/2/2;
-  }
-  header nav {
-    grid-area: 1/2/2/3;
-  }
-  header nav ul {
-    display: flex;
-    justify-content: space-between;
-  }
-}
 /**** SCCS FOR THE FOOTER ****/
 footer {
   background-color: #4361EE;
@@ -176,6 +160,16 @@ footer p {
   footer nav ul {
     width: 100%;
     justify-content: space-evenly;
+  }
+}
+/**** MEDIA QUERIES FOR SMARTPHONES ****/
+@media only screen and (max-width: 767px) {
+  footer nav {
+    max-width: 100vw;
+  }
+  footer nav ul {
+    flex-direction: column;
+    align-items: center;
   }
 }
 .homepage section.presentation {
@@ -373,6 +367,7 @@ footer p {
   border: 1px solid #D61E92;
 }
 .villager .single-villager .planning .events table thead tr th button {
+  width: 100%;
   font-size: 1.1rem;
   background-color: #D9D9D9;
   -webkit-clip-path: none;
@@ -464,6 +459,12 @@ footer p {
 }
 .player-progress article.bundles ul li p {
   margin-left: 0.6rem;
+}
+.player-progress article.bundles ul li p span.green {
+  color: #0CC09E;
+}
+.player-progress article.bundles ul li p span.pink {
+  color: #D61E92;
 }
 .player-progress article.artifacts {
   grid-area: 5/1/6/4;
@@ -726,6 +727,9 @@ form.forms fieldset p.info span {
 }
 form.forms fieldset p.info:hover span {
   visibility: visible;
+}
+form.forms a.pink {
+  color: #D61E92;
 }
 form.forms input[type=submit] {
   justify-self: center;
@@ -1023,14 +1027,17 @@ html body.dark-mode main {
 html body.dark-mode main a {
   color: #D9D9D9;
 }
-html body.dark-mode main .search {
+html body.dark-mode main.all-villagers .search {
   background-color: rgba(214, 30, 146, 0.4);
 }
-html body.dark-mode main .search::-moz-placeholder {
+html body.dark-mode main.all-villagers .search::-moz-placeholder {
   color: #D9D9D9;
 }
-html body.dark-mode main .search::placeholder {
+html body.dark-mode main.all-villagers .search::placeholder {
   color: #D9D9D9;
+}
+html body.dark-mode main.all-villagers .search:focus {
+  color: #FAFAFA;
 }
 html body.dark-mode main form.forms fieldset input[type=text]::-moz-placeholder, html body.dark-mode main form.forms fieldset input[type=password]::-moz-placeholder, html body.dark-mode main form.forms fieldset input[type=email]::-moz-placeholder {
   color: #FAFAFA;
