--- a/assets/styles/scss/users/partials/_footer.scss
+++ b/assets/styles/scss/users/partials/_footer.scss
@@ -40,3 +40,16 @@ footer {
         }
     }
 }
+
+/**** MEDIA QUERIES FOR SMARTPHONES ****/
+@media only screen and (max-width: 767px) {
+    footer {
+        nav {
+            max-width: 100vw;
+            ul {
+                flex-direction: column;
+                align-items: center;
+            }
+        }
+    }
+}
