--- a/templates/users/layout.phtml
+++ b/templates/users/layout.phtml
@@ -6,6 +6,7 @@
         <meta name="title" content="Farming Companion">
         <meta name="description" content="A tracker to a Stardew Valley game">
         <meta name="author" content="Marie">
+        <link rel="icon" href="/res04-projet-soutenance/assets/images/favicon.ico" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600&family=Inconsolata&display=swap" rel="stylesheet">
