Fixed some issues

--- a/templates/users/partials/_header.phtml
+++ b/templates/users/partials/_header.phtml
@@ -45,8 +45,8 @@
             </li>
         </ul>
     </nav>
-    <section class="font-size">
+    <div class="font-size">
         <button>A</button>
         <button>A</button>
-    </section>
+    </div>
 </header>
