--- a/templates/users/partials/_header.phtml
+++ b/templates/users/partials/_header.phtml
@@ -22,7 +22,7 @@
                 echo "<li><a href='/res04-projet-soutenance/my-account'>My account</a></li>
                     <li><a href='/res04-projet-soutenance/my-games'>My games</a></li>";
             }
-            else if(isset($_SESSION['admin']))
+            if(isset($_SESSION['admin']))
             {
                 echo "<li><a href='/res04-projet-soutenance/admin'>Admin Dashboard</a></li>";
             }
