--- a/templates/users/partials/_header.phtml
+++ b/templates/users/partials/_header.phtml
@@ -45,7 +45,7 @@
             </li>
         </ul>
     </nav>
-    <div class="font-size">
+    <div class="font-size" aria-description="Increase or decrease the font size">
         <button>A</button>
         <button>A</button>
     </div>
