--- a/templates/users/user/game.phtml
+++ b/templates/users/user/game.phtml
@@ -1,5 +1,5 @@
 <main class="player-progress">
-    <div class="accessibility">
+    <div class="accessibility" aria-description="accessibility menu">
         <a href="#player">Player</a>
         <a href="#skills">Skills</a>
         <a href="#equipment">Equipment</a>
