--- a/templates/users/villagers/villager.phtml
+++ b/templates/users/villagers/villager.phtml
@@ -4,7 +4,7 @@
     $villager = $data[0];
 ?>
 
-<main class="villager">
+<main class="villager" aria-description="accessibility menu">
     <div class="accessibility">
         <a href=#general>General</a>
         <a href=#events>Events</a>
