--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -115,6 +115,7 @@ html {
             border-collapse: collapse;
         }
 
+        // For the accessibility menu, accessible by TAB
         .accessibility {
             a {
                 padding: .6rem;
