--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -14,6 +14,32 @@ header img {
   grid-area: 1/1/2/2;
   width: 16rem;
 }
+header img:hover {
+  animation: moving 1s both;
+}
+@keyframes moving {
+  0% {
+    transform: translateX(0%);
+  }
+  10% {
+    transform: translateX(-10px) rotate(-3deg);
+  }
+  20% {
+    transform: translateX(5px) rotate(3deg);
+  }
+  30% {
+    transform: translateX(-5px) rotate(-1.7deg);
+  }
+  40% {
+    transform: translateX(2px) rotate(2.2deg);
+  }
+  50% {
+    transform: translateX(-1px) rotate(-1.2deg);
+  }
+  100% {
+    transform: translateX();
+  }
+}
 header nav {
   grid-area: 1/2/2/3;
   align-self: center;
@@ -1057,6 +1083,12 @@ html body.dark-mode main table tbody tr th {
 }
 html body.dark-mode main.games ul li a {
   color: #FAFAFA;
+}
+html body.transition {
+  transition: background-color 0.3s ease-in-out;
+}
+html body.transition * {
+  transition: background-color 0.3s ease-in-out;
 }
 
 /**** MEDIA QUERIES FOR TABLETS ****/
