Fixed an issue on the animation of the navigation

--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -1087,7 +1087,7 @@ html body.dark-mode main.games ul li a {
 html body.transition {
   transition: background-color 0.3s ease-in-out;
 }
-html body.transition * {
+html body.transition main, html body.transition main > * {
   transition: background-color 0.3s ease-in-out;
 }
 
