--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -234,7 +234,7 @@ html {
         &.transition {
             transition: background-color .3s ease-in-out;
 
-            & * {
+            & main, main > * {
                 transition: background-color .3s ease-in-out;
             }
         }
