--- a/templates/users/layout.phtml
+++ b/templates/users/layout.phtml
@@ -10,10 +10,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600&family=Inconsolata&display=swap" rel="stylesheet">
-        <link href="/res04-projet-soutenance/assets/styles/scss/style.css" rel="stylesheet">
+        <link href="/res04-projet-soutenance/assets/styles/css/style.css" rel="stylesheet">
         <title>Farming Companion</title>
     </head>
-    <body class="user-layout">
+    <body class="user-layout transition">
         <?php
             require 'partials/_header.phtml';
         ?>
