--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -233,9 +233,11 @@ html {
         // To ease the transition between light and dark mode
         &.transition {
             transition: background-color .3s ease-in-out;
+            -webkit-transition: background-color .3s ease-in-out;
 
             & main, main > * {
                 transition: background-color .3s ease-in-out;
+                -webkit-transition: background-color .3s ease-in-out;
             }
         }
     }
