--- a/templates/users/user/login.phtml
+++ b/templates/users/user/login.phtml
@@ -9,7 +9,7 @@
             <label for="password">Password</label>
             <input type="password" name="password" id="password">
         </fieldset>
-        <p id="error"></p>
+        <p class="error" id="error"></p>
 
         <a href="/res04-projet-soutenance/register" class="pink">Go register</a>
         <input type="submit" name="login" id="login" value="Login">
