--- a/assets/styles/scss/forms/_forms.scss
+++ b/assets/styles/scss/forms/_forms.scss
@@ -81,10 +81,15 @@ form {
                 }
             }
         }
+        
+        .error {
+            color: $pink;
+        }
 
         a {
             &.pink {
-                color: $pink;
+                color: $green;
+                font-weight: bolder;
             }
         }
 
