--- a/templates/users/layout.phtml
+++ b/templates/users/layout.phtml
@@ -13,7 +13,7 @@
         <link href="/res04-projet-soutenance/assets/styles/scss/style.css" rel="stylesheet">
         <title>Farming Companion</title>
     </head>
-    <body class="user-layout">
+    <body class="user-layout transition">
         <?php
             require 'partials/_header.phtml';
         ?>
