Added some statistics (monsters killed and money earned)

--- a/templates/users/user/game_partials/_stats.phtml
+++ b/templates/users/user/game_partials/_stats.phtml
@@ -7,4 +7,6 @@
     <p>You have spent <?=$player->getDaysSpent();?> days in game.</p>
     <p><?=$player->getSeasonsPassed();?> seasons have passed.</p>
     <p>You have successfully caught <?=$player->getFishCatched();?> fishes.</p>
+    <p>You have killed <?=$player->getMonstersKilled();?> monsters.</p>
+    <p>You have totally earned <?=$player->getMoneyEarned();?> gold.</p>
 </article>
